# pvfsga

./: .gitignore  README.md  pyproject.toml
docs/: how_to_run.md  pvfsga_explanation.md
docs/example_run/: example.py  fakeTg_linear_model.pkl  fakedh_linear_model.pkl  small_rgroups.csv
docs/example_run/post_processing/: post_run_analysis.ipynb
docs/images/: plot_exp.py
pvfsga/: main.py  models.py  run_model.py  store_poly_chem.py  utils.py
pvfsga/db/: __init__.py  adder.py
pvfsga/db/orm/: __init__.py  molecule.py  polymer.py  reaction.py
tests/: conftest.py  test_crossover.py  test_db_adder.py  test_db_orm.py  test_main.py  test_mutation.py  test_pydantic_models.py  test_run_model.py  test_utils.py
tests/test_db_seeds/: README.md  molecule.json  polymer.json  reaction.json
