[tool.poetry]
name = "pvfsga"
version = "1.1.3"
description = ""
authors = ["jdkern11 <leolion29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.3"
sqlalchemy = "^2.0.11"
rdkit = ">=2022.9.5"
pandas = "^1"
pydantic = "^1.10.9"
ipython = "^8.14.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"
canonicalize-psmiles = {git = "ssh://git@github.com/Ramprasad-Group/canonicalize_psmiles.git", rev = "v0.1.1"}
pyproject-toml = "^0.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
sqlalchemy-utils = "^0.41.1"
ruff = "^0.0.280"
coverage = "^7.2.7"
requests = { version = "^2.31.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
